generate email confirmation code
Still need to handle some constants & maybe callback
